# sm

./: .gitignore
backend/: .env  docker-compose.yml  pyproject.toml  pyrightconfig.json
backend/app/: exceptions.py  main.py  processing_pipeline.py
backend/app/config/: app_config.py  config.yaml  logger.py  settings.py
backend/app/database/: mongo.py  qdrant.py
backend/app/embedding/: utils.py
backend/app/embedding/provider/: base_embedding.py  ollama.py  sentence_transformer.py
backend/app/llm/: parallel_llm_processor.py  utils.py
backend/app/llm/provider/: base_llm.py  ollama.py  openai.py
backend/app/models/: base_information.py  chat.py  document.py  extracted_data.py  file.py  job.py  requirement.py  tender.py
backend/app/queue/: tender_queue.py  tender_worker.py
backend/app/repos/: chat_repo.py  document_repo.py  jobs_repo.py  requirements_repo.py  shared.py  tender_repo.py
backend/app/routes/: agent_traces.py  chat.py  jobs.py  requirements.py  tenders.py
backend/app/services/: base_information_service.py  chat_service.py  requirements_extraction_service.py  shared.py
backend/app/services/data_extraction/: agentic_data_extraction_service.py  data_extraction_service.py  extracted_data_parser.py  queries.py
backend/app/services/data_extraction/agentic/: __init__.py  agent.py  chunks.py  prompts.py  tools.py  types.py  (+1 more)
backend/app/services/document_processing/: document_processing_service.py  markdown_converter.py  utils.py
backend/app/services/rag/: rag_service.py
backend/minio/: nginx.conf
backend/scripts/: insert_sample_tenders.py
(+95 files in other folders)
