[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "docling>=2.61.2",
    "fastapi[standard]>=0.121.2",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-ollama>=1.0.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "minio>=7.2.18",
    "pymongo>=4.15.4",
    "qdrant-client>=1.15.1",
    "tiktoken>=0.12.0",
]
